--- a/main.html
+++ b/main.html
@@ -1322,6 +1322,556 @@ Merganni nishonga tekkizish ehtimoli 0.7 ga teng. 8 ta oʻq uzganda eng katta eh
 3/8
 3/20
 
+
+Savollar va javoblar
+Tajriba bitta o‘yin toshi va bitta tangani bir vaqtda tashlashdan iborat. Elementar hodisalar fazosi nechta elementdan iborat bo‘ladi?
+12
+8
+4
+36
+Tajriba bitta o‘yin toshi va bitta tangani bir vaqtda tashlashdan iborat bo‘lsa, gerb tushish hodisasi qanday elementar hodisalardan iborat bo‘ladi?
+{(gerb,1), (gerb,2),(gerb,3), (gerb,4),(gerb,5),(gerb,6)}
+{(gerb,1), (gerb,3), (gerb,5)}
+{(gerb,2), (gerb,4), (gerb,6)}
+{gerb}
+Tajriba bitta o‘yin toshi va bitta tangani bir vaqtda tashlashdan iborat bo‘lsa, toq ochko tushish hodisasi qanday elementar hodisalardan iborat bo‘ladi?
+{(gerb,1), (raqam,1),(gerb,3), (raqam,3),(gerb,5),(raqam,5)}
+{(gerb,1), (gerb,2),(gerb,3), (gerb,4),(gerb,5),(gerb,6)}
+{(raqam,1), (raqam,2),( raqam,3), (raqam,4),(raqam,5),(raqam,6)}
+{(gerb,2), (gerb,4), (gerb,6)}
+=
+Tajriba 5 ta o’yin toshini tashlashdan iborat.Tushgan ochkolar har xil bo’lish ehtimolligi topilsin.
+5/54
+1/6
+10/216
+1/36
+Tajriba 6 ta tanga tashlashdan iborat. Barcha tangalarda bir xil rasm bo’lish ehtimolligi topilsin.
+1/32
+1/6
+1/2
+1/64
+Idishda 4 ta oq, 4 ta qora va 4 ta sariq sharlar bor. Idishdan 3 ta har xil rangda sharlar olish ehtimolligi topilsin.
+16/55
+16/50
+1/120
+1/12
+0,1,2,3,4,5 raqamlardan bir xil raqamli 3 xonali son tuzish ehtimolligi topilsin.
+1/36
+5/36
+1/180
+1/6
+ELEMENTAR so’zi harflari aloxida kartochkalarda yozilgan. Kartochkalardan ketma-ket to’rttasi olinganda TEMA so’zi chiqish ehtimolligi topilsin.
+1/1008
+1/72
+1/504
+3/56
+Uchta o’yin toshi tashlanganda barcha ochkolar bir xil bo’lish ehtimolligi topilsin.
+1/36
+1/216
+1/6
+1/3
+4 honali avtomobil nomerida 3 ta raqam bir xil bo’lish ehtimolligi topilsin.
+0.036
+0.36
+1/1000
+9/1000
+5 ta tanga tashlanganda 4 tasida bir xil rasm bo’lish ehtimolligi topilsin.
+5/16
+1/16
+1/5
+1/32
+4 ta o’yin toshi tashlanmoqda. Kamida 3 tasida bir xil raqamlar tushish ehtimolligi topilsin.
+21/216
+1/6
+10/216
+1/36
+36 ta o’yin kartasidan tavakkaliga 3 tasi olinmoqda. Shularda 2 ta “TUZ” bo’lish ehtimolligi topilsin.
+16/595
+1/595
+1/36
+2/595
+36 ta o’yin kartasi aralashtirilganda 2 ta qora “QIROL” yonma-yon turish ehtimolligi topilsin.
+1/18
+1/36
+35/36
+2/35
+Jovonda 10 ta kitob bor, ikkitasi qizil jildli. shu qizil jildli kitoblar yonma-yon turish ehtimolligi topilsin.
+1/5
+1/10!
+1/9
+9/10!
+Idishda 1 dan 20 gacha sonlsr bilan nomerlangan 20 ta sharlar bor. Idishdan ketma-ket 2 ta shar olindi, birinchi olingan sharning nomeri ikkinchi olingan sharning nomeridan katta bo’lish ehtimolligi topilsin.
+1/2
+1/20
+1/10
+1/19
+1,2,3,4 raqamlardan 3 honali va raqamlar yig’indisi 4 dan oshmaydigan son tuzish ehtimolligi topilsin.
+1/16
+1/4
+1/64
+3/64
+Telefon nomerining oxirgi 3 ta raqami o’chib ketgan. O'chib ketgan raqamlarning 2 tasi 9 raqami bo’lish ehtimolligi topilsin.
+0.027
+0.001
+0.009
+0.21
+4 ta oyin toshi tashlanganda, faqat 3 tasi bir xil bo’lish ehtimolligi topilsin.
+5/54
+1/6
+10/216
+1/36
+3 ta oyin toshi tashlanganda 2 ta 1 raqam tushish ehtimolligi topilsin.
+5/72
+1/72
+1/5
+1/36
+Idishda 1,2,3 raqamli 3 ta shar bor. Idishdan ketma-ket uchta shar olindi. Olingan sharlarning raqami olinish tartibi bilan bir xil bo’lisg ehtimolligi topilsin.
+1/6
+1/3
+1/2
+1/4
+Aylanma stol atrofida 10 ta mehmon joylashgan , ulardan 2 nafari erkak. Shu ikki erkak yonma-yon o’tirish ehtimolligi topilsin.
+2/9
+1/5
+1/10
+1/9
+Idishda 1,2,3,4 raqamli 4 ta shar bor. Idishdan ketma-ket sharlar olinganda shardagi raqamlar o’sish tartibida chiqish ehtimolligi topilsin.
+1/24
+1/4
+1/6
+1/12
+Tomoni bir bo’lgan kvadratga tashlangan nuqtadan kvadrat tomonigacha bo’lgan mazofa 0.1dan oshmaslik ehtimolligi topilsin
+0.36
+0.4
+0.04
+1
+Agar, -1<x<1, -2<y<2 bo‘lsa P(y<2x)-?
+1/2
+1/4
+2/3
+3/4
+Agar, -1<x<1, -2<y<2 bo‘lsa P(y<|x|)-?
+5/8
+1/2
+3/8
+1/4
+Agar, 0<x<3, 0<y<3 bo‘lsa P(y>2x/3)-?
+2/3
+2/9
+4/9
+1/3
+Birlik kesmaga nuqta tashlanmoqda. Kichik bo’lakcha uzunligi 0.1 dan oshmaslik ehtimolligi topilsin.
+0.2
+0.1
+1/3
+1/2
+Birlik kesmaga nuqta tashlanmoqda. Nuqtadan kesma markazigacha bo’lgan masofa 0.1dan oshmaslik ehtimolligi topilsin.
+0.2
+0.1
+1/3
+1/2
+Birlik kesmaga nuqta tashlanmoqda. Nuqtadan kesma uchigacha bo’lgan masofa 0.1dan oshmaslik ehtimolligi topilsin.
+0.2
+0.1
+1/3
+1/2
+Birlik kesmaga nuqta tashlanmoqda. Nuqtadan kesma boshigacha bo’lgan masofa 0.1dan oshmaslik ehtimolligi topilsin.
+0.1
+0.2
+1/3
+1/2
+Agar, 0<x<4, y<x/2 bo‘lsa P(y<x/4)-?
+1/2
+1/4
+1/8
+1/3
+Ehtimollikning klassik ta‘rifida elementar hodisalar fazosiga qanday shart qo‘yiladi?
+Cheklilik
+Sanoqli cheksizlik
+Sanoqsiz cheksizlik
+Bo‘sh bo‘lmaslik
+Yongʻindan xabar berish uchun 2 ta signalizator oʻrnatilgan. Agar A va B mos ravishda bu signalizatorlarning ishlash hodisasi boʻlsa, yongʻindan xabar topish hodisasini A va B lar orqali ifodalang
+Muqarrar hodisaning ehtimoli nimaga teng?
+1
+0
+0.5
+-1
+Mumkin bo'lmagan hodisaning ehtimoli nimaga teng?
+0
+1
+-1
+0.5
+Ixtiyoriy A hodisaning ehtimolligi uchun qanday xossa o'rinli?
+Bernulli formulasini aniqlang?
+Puasson formulasini aniqlang?
+Muavr-Laplasning lokal formulasini aniqlang?
+Taqsimot koʻpburchagi deyiladi
+Taqsimot qonuni deyiladi
+Taqsimot funksiyasi deyiladi
+Zichlik funksiyasi deyiladi
+2023.4
+2022.4
+1.4
+0.4
+1.39
+-0.21
+1.42
+-0.12
+0.3
+0.25
+0.35
+0.4
+1.48
+2023.48
+0.76
+-0.52
+3.9
+3.2
+3.1
+3.4
+4.49
+5.59
+1.63
+1.62
+2
+3
+4
+5
+3
+2
+4
+5
+3
+4
+5
+2
+3
+4
+5
+2
+2.29
+3.39
+3.1
+4.21
+0.74
+2021.26
+2022.74
+0
+1.8
+2020.2
+2023.8
+0.2
+2.06
+2024.06
+2023
+20.6
+0.91
+2022.91
+-2021.09
+-0.59
+2.29
+3.39
+3.1
+4.21
+Oʻyin toshini 4 marta tashlaganda 5 ochkoni ikki marta chiqish ehtimoli topilsin?
+25/216
+18/215
+191/216
+197/215
+Merganni nishonga tekkizish ehtimoli 0.7 ga teng. 8 ta oʻq uzganda eng katta ehtimolli nishonga tegishlar soni topilsin
+6
+5
+7
+4
+0
+1
+2
+3
+1
+0
+2
+5
+0
+1
+2
+3
+1
+0
+2
+-1
+"
+"
+3/8
+5/8
+1/8
+8/3
+3/2
+2/3
+3/4
+1/4
+3/20
+3/2
+7/9
+3/8
+2
+0
+3/8
+3/20
+-1
+2
+1
+2
+0.5
+-1
+2
+1
+2
+0.5
+5,2
+5
+6
+4
+6
+0.5
+3
+0.5
+4
+0.5
+7
+0.5
+6,5
+6
+7,5
+5,5
+8,50.5
+5
+0.5
+8
+0.5
+100.5
+aniqlanmaydi
+3
+6
+7
+0
+1
+-2
+4
+1
+-1
+3
+-2
+5,2
+3,2
+4
+4,5
+6
+0.5
+3
+0.5
+2
+0.5
+8
+0.5
+6,5
+4
+2
+5
+8,50.5
+6
+0.5
+11
+7,5
+aniqlanmaydi
+1
+3
+6
+2
+3
+-1
+-3
+8
+6
+5
+7
+5,2
+4,5
+6
+3
+6
+0.5
+8
+0.5
+7
+0.5
+5
+0.5
+6,5
+4,5
+5
+5,5
+8,50.5
+6,50.5
+7
+0.5
+11
+0.5
+aniqlamaydi
+1
+3
+6
+9
+7
+10
+11
+8
+8,3
+8,9
+10,5
+10,5
+8
+8,7
+9,4
+17
+18
+18,9
+16,5
+14,5
+15,2
+13,8
+<15/p>
+13
+12
+14
+15
+20,5
+19,7
+21,3
+19,2
+32
+31
+33
+30
+24,5
+24
+25,4
+24,9
+22
+21
+21,5
+23
+22,5
+21,5
+22
+23
+5
+4
+3
+1
+25
+16
+9
+4
+1
+2
+3
+4
+3
+2
+1
+5
+1
+2
+3
+4
+12
+13
+11
+10
+1,68
+2,38
+3,42
+0,66
+24,6176
+20,4176
+16,4425
+27,2424
+4.96
+3.24
+5.76
+8.12
+25.12
+24.12
+5,535457
+3,356789
+-4
+0
+3
+7
+3
+0
+7
+-4
+5.012
+12
+-4.012
+0
+13,18
+11,08
+15,04
+14,28
+29,2276
+31,24256
+24,24256
+27,2276
+5,406256
+6,121245
+4,835364
+4,253698
+29,82408
+33,21457
+31,24589
+27,12365
+19
+18
+5
+50
+12
+9
+19
+5
+5,461143
+6,253547
+4,253974
+6,983541
+8,18
+9,28
+10,12
+7,42
+17,1876
+18,8568
+16,1635
+19,2538
+4,145793
+5,553698
+6,321458
+3,214569
+17,53837
+18,54789
+19,24587
+16,25684
+6
+16
+9
+2
+9
+6
+14
+16
+4,187883
+5,553544
+6,214536
+2,235544
     </p>
 </body>
 </html>
